--- a/terms.html
+++ b/terms.html
@@ -133,7 +133,7 @@ footer {
       <div class="list">
         <div class="list-item">
           <span class="dash">—</span>
-          <span>Pin addition to wave, payment is also accepted via credit card, Zelle (347-738-8058), or Venmo (@Svetlana-Dubkova, last 4 digits: 8058).</span>
+          <span>in addition to wave, payment is also accepted via credit card, Zelle (347-738-8058), or Venmo (@Svetlana-Dubkova, last 4 digits: 8058).</span>
         </div>
         <div class="list-item">
           <span class="dash">—</span>
