--- a/eventpricing.html
+++ b/eventpricing.html
@@ -315,14 +315,15 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         <div class="tier-header">
           <h2 class="tier-title">mini coverage</h2>
           <div class="price-block">
-            <div class="tier-price">$350</div>
+            <div class="tier-price">$500</div>
             <div class="price-detail">1 hour</div>
           </div>
         </div>
         <ul class="tier-features">
           <li>1 hour of professional event coverage</li>
           <li>culled, color corrected & lightly retouched images</li>
-          <li>online gallery delivery in 7 days</li>
+          <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
+          <li>full online gallery delivery in 7 days</li>
           <li>all high-resolution digital files</li>
         </ul>
         <div class="addons">
@@ -348,9 +349,11 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         </div>
         <ul class="tier-features">
           <li>professional event coverage</li>
-          <li>fully edited images</li>
-          <li>online gallery delivery in 7 days</li>
+          <li>culled, color corrected & lightly retouched images</li>
+          <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
+          <li>full online gallery delivery in 7 days</li>
           <li>all high-resolution files</li>
+
         </ul>
         <div class="addons">
           <label class="addon-option">
@@ -376,8 +379,10 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         <ul class="tier-features">
           <li>professional event coverage</li>
           <li>culled, color corrected & lightly retouched images</li>
-          <li>online gallery delivery in 10 days</li>
+          <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
+          <li>full online gallery delivery in 10 days</li>
           <li>all high-resolution files</li>
+
         </ul>
         <div class="addons">
           <label class="addon-option">
