--- a/eventpricing.html
+++ b/eventpricing.html
@@ -321,6 +321,7 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         </div>
         <ul class="tier-features">
           <li>1 hour of professional event coverage</li>
+          <li>40-50 images per hour</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
           <li>full online gallery delivery in 7 days</li>
@@ -348,7 +349,8 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
           </div>
         </div>
         <ul class="tier-features">
-          <li>professional event coverage</li>
+          <li>2 hours of professional event coverage</li>
+          <li>40-50 images per hour</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
           <li>full online gallery delivery in 7 days</li>
@@ -377,7 +379,8 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
           </div>
         </div>
         <ul class="tier-features">
-          <li>professional event coverage</li>
+          <li>4 hours of professional event coverage</li>
+          <li>40-50 images per hour</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
           <li>full online gallery delivery in 10 days</li>
@@ -402,11 +405,12 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
           <h2 class="tier-title">full day coverage</h2>
           <div class="price-block">
             <div class="tier-price">$1,400</div>
-            <div class="price-detail">8 hours</div>
+            <div class="price-detail">9 hours</div>
           </div>
         </div>
         <ul class="tier-features">
-          <li>professional event coverage</li>
+          <li>up to 9 hours of professional event coverage</li>
+          <li>40-50 images per hour</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>online gallery delivery in 14 days</li>
           <li>all high-resolution files</li>
