new number photos

--- a/eventpricing.html
+++ b/eventpricing.html
@@ -321,7 +321,7 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         </div>
         <ul class="tier-features">
           <li>1 hour of professional event coverage</li>
-          <li>40-50 images per hour</li>
+          <li>20-50+ images per hour</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
           <li>full online gallery delivery in 7 days</li>
@@ -350,7 +350,7 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         </div>
         <ul class="tier-features">
           <li>2 hours of professional event coverage</li>
-          <li>40-50 images per hour</li>
+          <li>20-50+ images per hour</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
           <li>full online gallery delivery in 7 days</li>
@@ -380,7 +380,7 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         </div>
         <ul class="tier-features">
           <li>4 hours of professional event coverage</li>
-          <li>40-50 images per hour</li>
+          <li>20-50+ images per hour</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>immediate photos: 10 edited selects delivered by 10 AM the next day</li>
           <li>full online gallery delivery in 7 days</li>
