new number for full

--- a/eventpricing.html
+++ b/eventpricing.html
@@ -411,6 +411,7 @@ lana dubkova • elevated event photography in nyc // parties | corporate events
         <ul class="tier-features">
           <li>up to 9 hours of professional event coverage</li>
           <li>40-50 images per hour</li>
+          <li>immediate photos: 15 edited selects delivered by 10 AM the next day</li>
           <li>culled, color corrected & lightly retouched images</li>
           <li>online gallery delivery in 7 days</li>
           <li>all high-resolution files</li>
