--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>SVETLANA DUBKOVA - PHOTOGRAPHER</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://skovaphotos.carrd.co/">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://svetlanadubkova.myportfolio.com">click here</a>.</p>
 </body>
 </html>
