--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://skovaphotos.carrd.co">
+    <meta http-equiv="refresh" content="0; url=https://svetlanadubkova.myportfolio.com">
     <title>SVETLANA DUBKOVA - PHOTOGRAPHER</title>
 </head>
 <body>
